tests/bug_detector_tests/typeof3.js
/*******************************************************************************
    Copyright (c) 2013, KAIST.
    All rights reserved.

    Use is subject to license terms.

    This distribution may include materials developed by third parties.
 ***************************************************************************** */

var y = 3, x = typeof x + y === "number"?x:y.valueOf();
